Add target that simplifies executing the JUnit based KF-test suite.